--- a/pom.xml
+++ b/pom.xml
@@ -109,13 +109,13 @@
 			<version>1.2</version>
 		</dependency>
 		
-		<!-- DropBox Core API -->
+		<!-- Dropbox Core API -->
 		<dependency>
 		  <groupId>com.dropbox.core</groupId>
 		  <artifactId>dropbox-core-sdk</artifactId>
-		  <version>1.7</version>
+		  <version>[1.7,1.8)</version>
 		</dependency>
-		
+	
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
